inventory/kustomization/base/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-green
  labels:
    app: inventory-green
spec:
  # Scaling
  replicas: 1
  selector:
    matchLabels:
      app: inventory-green
  template:
    metadata:
      labels:
        app: inventory-green
    spec:
      containers:
      - name: inventory-green
        image: hylmar/inventory:GREEN
        imagePullPolicy: Always
