inventory/kustomization/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inventory
spec:
  selector:
    app: inventory
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  type: NodePort
